--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "src",
     "ios",
     "android",
+    "app.plugin.js",
     "expo-module.config.json",
     "README.md"
   ],
@@ -36,11 +37,10 @@
   "author": "Akimov Eugeney <akimoveugeney@gmailcom> ()",
   "license": "MIT",
   "homepage": "https://github.com/AkimovEugeney/expo-yookassa#readme",
-  "dependencies": {},
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "expo-module-scripts": "^5.0.8",
     "expo": "^54.0.27",
+    "expo-module-scripts": "^5.0.8",
     "react-native": "0.81.5"
   },
   "peerDependencies": {
